Change nth_prime to use inverse Li+Corr instead of inverse R

--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 Revision history for Perl module Math::Prime::Util
 
-0.35  2013-11
+0.35  2013-12
 
     [API Changes]
 
@@ -19,13 +19,18 @@ Revision history for Perl module Math::Prime::Util
     [FUNCTIONALITY AND PERFORMANCE]
 
     - Switched to extended LMO algorithm for prime_count.  Much better memory
-      use and much faster for large values.  Speeds up nth_prime also.
+      use and much faster for large values.  Speeds up nth_prime also.  Huge
+      thanks to Christian Bau's excellent paper and examples.
 
     - Some fixes for 32-bit.
 
     - prime_count_approx, upper, and lower return exact answers in more cases.
 
     - Fixed a problem with Lehmer prime_count introduced in 0.34.
+
+    - nth_prime changed from RiemannR to inverse Li (with partial addition).
+      This makes some of the big nth_prime calculations (e.g. 10^15, 10^16)
+      run quite a bit faster as they sieve less on average.
 
 
 0.34  2013-11-19
