--- a/Changes
+++ b/Changes
@@ -7,6 +7,14 @@ Revision history for Perl module Math::Prime::Util
     - Simplified primes().  No longer takes an optional hashref as first arg,
       which was awkward and never documented.
 
+    - Dynamically loads the PP code and Math::BigInt only when needed.  This
+      removes a lot of bloat for the usual cases:
+        2.0 MB  perl -E 'say 1'
+        4.2 MB  Math::Prime::XS
+        4.6 MB  MPU 0.37
+        9.6 MB  MPU 0.36
+       10.0 MB  MPU 0.35
+
 0.36  2014-01-13
 
     [API Changes]
