--- a/Changes
+++ b/Changes
@@ -10,10 +10,20 @@ Revision history for Perl module Math::Prime::Util
     - Dynamically loads the PP code and Math::BigInt only when needed.  This
       removes a lot of bloat for the usual cases:
         2.0 MB  perl -E 'say 1'
-        4.2 MB  Math::Prime::XS
-        4.6 MB  MPU 0.37
+        4.4 MB  MPU 0.37
+        4.5 MB  Math::Prime::XS + Math::Factor::XS
+        5.3 MB  Math::Pari
         9.6 MB  MPU 0.36
        10.0 MB  MPU 0.35
+
+    - Together with the previous, adjusted factor script.  Over 2x faster
+      with native integer (non-expression) arguments.  This is just not
+      loading thousands of lines of Perl code that aren't used, which
+      was more time-consuming than the actual factoring.
+
+    - nth_prime_{lower,upper,approx} and prime_count_{lower,upper,approx}
+      moved to XS->PP.  This helps us slim down and cut startup overhead.
+
 
 0.36  2014-01-13
 
