--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl module Math::Prime::Util
 
+0.40  2014-03
+
+    - Update PP Frobenius-Underwood test.
+
+
 0.39  2014-03-01
 
     - Changed logl to log in AKS.  Critical for FreeBSD and NetBSD.
