--- a/TODO
+++ b/TODO
@@ -68,3 +68,6 @@
 - Ensure a fast path for Math::GMP from MPU -> MPU:GMP -> GMP, and back.
 
 - znlog better implementation
+
+- We don't use legendre_phi for other functions any more, but it'd be nice
+  to speed it up using some ideas from the Ohana 2011 SAGE code.
