--- a/TODO
+++ b/TODO
@@ -70,4 +70,5 @@
 - znlog better implementation
 
 - We don't use legendre_phi for other functions any more, but it'd be nice
-  to speed it up using some ideas from the Ohana 2011 SAGE code.
+  to speed it up using some ideas from the Ohana 2011 SAGE branch.  For example
+  (10**13,10**5) takes 2.5x longer, albeit with 6x less memory.
