Use 64-bit Montgomery math in primality tests even for 32-bit inputs

--- a/Changes
+++ b/Changes
@@ -8,9 +8,10 @@ Revision history for Perl module Math::Prime::Util
 
     [FUNCTIONALITY AND PERFORMANCE]
 
-    - New modular inverse from W. Izykowski, from Arazi (1994).  This is a
-      substantial (20-40%) speedup for primality testing in range 2^32 to 2^64.
-      This affects functions like next_prime, prev_prime, etc.
+    - Big speedup for primality testing in range ~2^25 to 2^64, which also
+      affects functions like next_prime, prev_prime, etc.  This is due to two
+      changes in the Montgomery math section -- an improvement to mont_prod64
+      and using a new modular inverse from W. Izykowski based on Arazi (1994).
 
     - Small improvement to twin_prime_count_approx and nth_twin_prime_approx.
 
