--- a/TODO
+++ b/TODO
@@ -72,3 +72,9 @@
 - We don't use legendre_phi for other functions any more, but it'd be nice
   to speed it up using some ideas from the Ohana 2011 SAGE branch.  For example
   (10**13,10**5) takes 2.5x longer, albeit with 6x less memory.
+
+- forpart:
+    - alias with fordivisors to save space
+    - consider use of const_int since so many entries will be 1 or 2
+    - documentation (mention for partitions function, mention Pari 2.7)
+    - tests
