--- a/Changes
+++ b/Changes
@@ -8,6 +8,7 @@ Revision history for Perl module Math::Prime::Util
     - invmod(a,n)                            inverse of a modulo n
     - forpart { ... } n[,{...}]              loop over partitions (Pari 2.6.x)
     - vecsum(...)                            sum list of integers
+    - binomial(n,k)                          binomial coefficient
 
     [FUNCTIONALITY AND PERFORMANCE]
 
