--- a/TODO
+++ b/TODO
@@ -77,4 +77,6 @@
 
 - is_power should take a third argument that gets set to the root
 
-- PP BSGS for znlog, and for GMP.  Pohlig-Hellman.
+- GMP BSGS for znlog.  Pohlig-Hellman.
+  example for PH: say znlog(5489679500557563605,12,6043832232636232187)'
+  Experiment with Wang/Zhang 2012 Rho cycle finding
