Alternate RiemannR, fix bignum Li

--- a/Changes
+++ b/Changes
@@ -9,6 +9,8 @@ Revision history for Perl module Math::Prime::Util
     - Another inverse improvement from W. Izykowski, doing 8 bits at a time.
       A further 1% to 15% speedup in primality testing.
 
+    - An alternate method for calculating RiemannR used when appropriate.
+
 
 0.41  2014-05-18
 
